# moveable-morphable-components

./: .buildinfo  README.md  components.html  domain.html  finite_element.html  func_comp_test.py  genindex.html  index.html  layout.html  main.html  objects.inv  plot.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  shape_func_and_stiffness.py
.devcontainer/: devcontainer.json
_modules/: collections.html  components.html  domain.html  finite_element.html  index.html  layout.html  main.html  plot.html
docs/source/: conf.py
examples/: cantilever_diagonal_grid_of_beams.py
moveable_morphable_components/: components.py  domain.py  finite_element.py  layout.py  main.py  method_moving_asymptotes.py  plot.py
tests/: test_domain.py  test_finite_element.py  test_main.py
