[tool.poetry]
name = "moveable-morphable-components"
version = "0.1.0"
description = ""
authors = ["Jonathan Raines <jr0278@bristol.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
sympy = "^1.13.1"
plotly = "^5.23.0"
pandas = "^2.2.2"
scipy = "^1.14.0"
jax = { extras = ["cuda12"], version = "^0.4.31" }
tqdm = "^4.66.5"
networkx = "^3.3"
optax = "^0.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["./moveable_morphable_components"]
