[project]
name = "moveable-morphable-components"
version = "0.2.0"
description = "An implementation of the Moveable Morphable Components algorithm"
authors = [
    { name = "Jonathan Raines", email = "jonathan.raines@bristol.ac.uk" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]>=0.4.34",
    "kaleido==0.2.1",
    "networkx>=3.4.1",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
    "sympy>=1.13.3",
    "tqdm>=4.66.5",
]

[project.urls]
Documentation = "https://jonathanraines.github.io/moveable-morphable-components/"
Repository = "https://github.com/JonathanRaines/moveable-morphable-components"
Issues = "https://github.com/JonathanRaines/moveable-morphable-components/issues"

[tool.pytest.ini_options]
pythonpath = ["./moveable_morphable_components"]

[tool.ruff]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ANN201", "D100"]

[tool.uv]
dev-dependencies = [
    "ghp-import>=2.1.0",
    "pydata-sphinx-theme>=0.15.4",
    "pytest>=8.3.3",
    "sphinx>=8.1.3",
]
